--- a/taller.html
+++ b/taller.html
@@ -23,7 +23,7 @@
             class="col justify-content-center, text-center"
             style="background-color: #cec5c7;"
           >
-            <h1>Jinsang</h1>
+          <a style="color:black;" href="https://jinsangbeats.bandcamp.com"><h1>Jinsang</h1></a>
           </div>
         </div>
         <div style="background-color: black; padding: 1%; margin-left: -15px; margin-right: -15px;">
